# subxt-metadata

./: Cargo.toml
src/: main.rs
