[package]
name = "subxt-get-metadata-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.41.0", features = ["reconnecting-rpc-client"] }
tokio = { version = "1.0", features = ["full"] }
frame-metadata = { version = "20.0.0", features = ["decode"], default-features = false }
hex = "0.4"
serde_json = "1.0"
async-trait = "0.1"
parity-scale-codec = { version = "3.0", features = ["derive"] }
scale-encode = "0.6"
log = "0.4"
env_logger = "0.10"


[patch.crates-io]
subxt-metadata = { path = "/home/ubuntu/.cargo/registry/src/index.crates.io-6f17d22bba15001f/subxt-metadata-0.41.0" }
subxt-core = { path = "/home/ubuntu/.cargo/registry/src/index.crates.io-6f17d22bba15001f/subxt-core-0.41.0" }

